--- a/app/src/main/res/menu/nav_drawer_header.xml
+++ b/app/src/main/res/menu/nav_drawer_header.xml
@@ -29,24 +29,10 @@
         android:id="@+id/actionButtons"
         android:checkableBehavior="single">
 
-
-        <item
-            android:id="@+id/btnLoginNav"
-            android:icon="@drawable/ic_menu_login"
-            android:title="@string/menu_login"
-            android:visible="true" />
-
-        <item
-            android:id="@+id/btnRegisterNav"
-            android:icon="@drawable/ic_menu_register"
-            android:title="@string/menu_register"
-            android:visible="true" />
-
         <item
             android:id="@+id/btnLogout"
             android:icon="@drawable/ic_menu_logout"
-            android:title="@string/menu_logout"
-            android:visible="false" />
+            android:title="@string/menu_logout" />
     </group>
 
 </menu>
