--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#38B6FF</color>
-    <color name="colorPrimaryDark">#242323</color>
-    <color name="colorAccent">#FFF</color>
+    <color name="colorPrimary">#4abaff</color>
+    <color name="colorPrimaryDark">#0795ff</color>
+    <color name="colorAccent">#474444</color>
+
+    <color name="textColor">#121212</color>
+    <color name="textColorHint">#99121212</color>
 </resources>
