--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -74,5 +74,5 @@
         app:itemIconTint="@color/colorPrimary"
         app:itemTextAppearance="@style/ToolbarSubtitleTextAppearance"
         app:itemTextColor="@color/textColor"
-        app:menu="@menu/nav_drawer_header" />
+        app:menu="@menu/nav_drawer_header_admin" />
 </androidx.drawerlayout.widget.DrawerLayout>
