--- a/app/src/main/res/layout/fragment_active_booking.xml
+++ b/app/src/main/res/layout/fragment_active_booking.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activeBooking.ActiveBookingFragment">
 
+
+    <TextView
+        android:id="@+id/bookingStatusNone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:drawableTop="@drawable/ic_icon_status_none"
+        android:fontFamily="@font/lato"
+        android:text="No active bookings found."
+        android:textColor="@color/textColor"
+        android:textSize="16sp"
+        android:visibility="visible" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activeBookingList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:paddingStart="10dp"
+        android:paddingTop="5dp"
+        android:paddingEnd="10dp"
+        android:visibility="gone" />
 
-</LinearLayout>
+</RelativeLayout>
