--- a/app/src/main/res/menu/nav_drawer_header.xml
+++ b/app/src/main/res/menu/nav_drawer_header.xml
@@ -11,6 +11,12 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
+
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_menu_profile"
+            android:title="@string/menu_profile" />
+
         <item
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_menu_schedule"
